# wgpu-yew-test

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  Trunk.toml  index.html
app/src/: main.rs  renderer.rs  triangle_canvas.rs
app/src/shader/: shader.wgsl
